group balances changes