@@ -6,6 +6,8 @@ import com.settler.domain.groupbalances.dto.response.SettlementResponse;
 import com.settler.domain.groupbalances.entity.GroupBalance;
 import com.settler.domain.groupbalances.repo.GroupBalanceRepository;
 import com.settler.domain.groupbalances.service.IGroupBalanceService;
+import com.settler.domain.users.entity.User;
+import com.settler.domain.users.repo.UserRepository;
 import com.settler.readmodel.BalanceCalculator;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -16,6 +18,7 @@ import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+
 @Service
 @Slf4j
 @Transactional
@@ -23,28 +26,28 @@ public class GroupBalanceServiceImpl implements IGroupBalanceService {
 
     private final ExpenseRepository expenseRepository;
     private final GroupBalanceRepository groupBalanceRepository;
+    private final UserRepository userRepository;
 
     public GroupBalanceServiceImpl(ExpenseRepository expenseRepository,
-                                   GroupBalanceRepository groupBalanceRepository) {
+                                   GroupBalanceRepository groupBalanceRepository,
+                                   UserRepository userRepository) {
         this.expenseRepository = expenseRepository;
         this.groupBalanceRepository = groupBalanceRepository;
+        this.userRepository = userRepository;
     }
 
     @Override
     public void recalculateBalances(UUID groupId, String correlationId) {
         log.info("[{}] Recalculating balances for group {}", correlationId, groupId);
 
-        // 1️⃣ Fetch all expenses for the group
         List<Expense> expenses = expenseRepository.findByGroupId(groupId);
         if (expenses.isEmpty()) {
             log.warn("[{}] No expenses found for group {}", correlationId, groupId);
             return;
         }
 
-        // 2️⃣ Compute net balances for each user
         Map<UUID, BigDecimal> netBalances = BalanceCalculator.calculateNetBalances(expenses);
 
-        // 3️⃣ Update or insert group balances
         netBalances.forEach((userId, balance) -> {
             GroupBalance gb = groupBalanceRepository.findByGroupIdAndUserId(groupId, userId)
                     .orElse(GroupBalance.builder()
@@ -56,7 +59,7 @@ public class GroupBalanceServiceImpl implements IGroupBalanceService {
             groupBalanceRepository.save(gb);
         });
 
-        log.info("[{}] ✅ Group balances recalculated for {} users in group {}", correlationId, netBalances.size(), groupId);
+        log.info("[{}] ✅ Group balances recalculated for {} users", correlationId, netBalances.size());
     }
 
     @Override
@@ -75,31 +78,37 @@ public class GroupBalanceServiceImpl implements IGroupBalanceService {
             return Collections.emptyList();
         }
 
+        Map<UUID, String> userNames = userRepository.findAll().stream()
+                .collect(Collectors.toMap(User::getId, User::getDisplayName));
+
         List<GroupBalance> debtors = balances.stream()
                 .filter(b -> b.getBalance().compareTo(BigDecimal.ZERO) < 0)
                 .sorted(Comparator.comparing(GroupBalance::getBalance))
-                .collect(Collectors.toList());
+                .toList();
 
         List<GroupBalance> creditors = balances.stream()
                 .filter(b -> b.getBalance().compareTo(BigDecimal.ZERO) > 0)
                 .sorted((a, b) -> b.getBalance().compareTo(a.getBalance()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<SettlementResponse> settlements = new ArrayList<>();
-
         int i = 0, j = 0;
+
         while (i < debtors.size() && j < creditors.size()) {
             GroupBalance debtor = debtors.get(i);
             GroupBalance creditor = creditors.get(j);
 
             BigDecimal amount = debtor.getBalance().abs().min(creditor.getBalance());
+            if (amount.compareTo(BigDecimal.ZERO) <= 0) break;
+
             settlements.add(SettlementResponse.builder()
                     .fromUserId(debtor.getUserId())
+                    .fromUserName(userNames.getOrDefault(debtor.getUserId(), "Unknown"))
                     .toUserId(creditor.getUserId())
+                    .toUserName(userNames.getOrDefault(creditor.getUserId(), "Unknown"))
                     .amount(amount)
                     .build());
 
-            // Adjust balances
             debtor.setBalance(debtor.getBalance().add(amount));
             creditor.setBalance(creditor.getBalance().subtract(amount));
 
@@ -110,6 +119,5 @@ public class GroupBalanceServiceImpl implements IGroupBalanceService {
         log.info("[{}] Generated {} settlement suggestions", correlationId, settlements.size());
         return settlements;
     }
-
-
 }
+
